--- a/الرياضيات باللغة الإنجليزية video.html
+++ b/الرياضيات باللغة الإنجليزية video.html
@@ -121,7 +121,7 @@
 								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png"><a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Prepratory/Prepratory2/Term2/Streem/Math%20English%20-%20Prep%202%20-%20TR2%20-%20C%20-%20W7-1.pdf" target="_blank">الأداء الصفي</a></td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								 	<td align="center" width="10" height="73" scope="col">&nbsp;</td>
-								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">General Exercise on unit 1 and Similarity<&nbsp;</td>
+								  <td dir="rtl" align="center" width="229" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/Button.png">General Exercise on unit 1 and Similarity</td>
 								  <td align="center" width="76" height="73" scope="col" background="./الرياضيات باللغة الإنجليزية video_files/icon.png"><img src="./الرياضيات باللغة الإنجليزية video_files/Asset 2.png" alt=""></td>
 								</tr>
 								<tr>
